tests-integration/fixtures/checking/1772824200_record_binder_additional_property_nested/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 39
expression: report
---
Terms
test :: { outer :: { x :: Int } } -> Int

Types

Diagnostics
error[AdditionalProperty]: Additional properties not allowed: y
  --> 4:15..4:23
  |
4 | test { outer: { x, y } } = x
  |               ^~~~~~~~
